--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -12,4 +12,7 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 
+    <system.serviceModel>
+       
+    </system.serviceModel>
 </configuration>
