--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="Bower" version="1.3.11" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="Less.js" version="1.5.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Node.js" version="0.10.28" targetFramework="net45" />
+  <package id="NoGit" version="0.0.8" targetFramework="net45" />
 </packages>
